# aegis

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  plan.md
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: env.js  server.js
circuits/claim/: Nargo.toml
circuits/commit/: Nargo.toml
circuits/reputation/: Nargo.toml
circuits/tally_finalize/: Nargo.toml
circuits/tally_update/: Nargo.toml
contracts/ultrahonk_soroban_verifier/: Cargo.toml
contracts/ultrahonk_soroban_verifier/src/: transcript.rs  verifier.rs
contracts/ultrahonk_soroban_verifier/tests/: generated_commit.rs
contracts/ultrahonk_verifier/: Cargo.toml
contracts/ultrahonk_verifier/src/: lib.rs
contracts/ultrahonk_verifier/test_snapshots/: verifier_contract_accepts_real_tally_finalize_fixture.1.json  verifier_contract_accepts_real_tally_update_fixture.1.json  verifier_contract_rejects_wrong_fixture_for_vk.1.json
contracts/ultrahonk_verifier/tests/: contract.rs
frontend/: README.md  bbjs.d.ts  package-lock.json  package.json  tsconfig.json
scripts/: barretenberg.js  claim.js  collect.js  commit.js  create-market.js  deploy-ephemeral-market.js  deploy-testnet.js  deploy.sh  env.js  finalize.js  generate-proof-fixtures.js  generate-verifier.sh  resolve.js  setup-usdc.js  smoke-condition-variants.mjs  smoke-frontend-helpers.mjs  smoke-mpc-e2e-dynamic.mjs  smoke-mpc-e2e.mjs  stellar-submit.js
test/: integration.test.js  reputation-zk.test.js  reputation.test.js
verdict/: package-lock.json  package.json
(+136 files in other folders)
