[package]
name = "ultrahonk-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.1.0", features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "../ultrahonk_soroban_verifier" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
